    - rashiftint(n, k)                right shift n by k bits (flooring)
    - absint(n)                       integer absolute value
    - negint(n)                       integer negation
    - cmpint(a, b)                    integer comparison (like <=>)
    - signint(a, b)                   integer sign (-1,0,1)
    - random_safe_prime               for n-bit safe primes
    - is_gaussian_prime(a,b)          is a+bi a Gaussian prime
    - is_lucky(n)                     predicate for lucky number sieve
    - is_happy(n)                     if n happy number, returns height of n
    - is_happy(n,base,exponent)       as above but with given base and power
    - is_smooth(n,k)                  is n a k-smooth number
    - is_rough(n,k)                   is n a k-rough number
    - is_practical(n)                 is n a practical number
    - is_delicate_prime(n[,b])        is n a digitally delicate prime (base b)
    - is_sum_of_squares(n[,k])        can n be a sum of k squares (dflt k=2)
    - is_congruent_number(n)          is n a "congruent number"
    - is_perfect_number(n)            is n equal to sum of its proper divisors
    - is_omega_prime(k,n)             is n divisible by exactly k primes
    - is_almost_prime(k,n)            does n have exactly k prime factors
    - is_chen_prime(n)                is n prime and n+2 prime or semiprime
    - is_powerfree(n[,k])             is n a k-powerfree number (default k=2)
    - is_powerful(n[,k])              is n a k-powerful number (default k=2)
    - is_perfect_power(n)             is n a perfect power (1,4,8,9,16,25,..)
    - is_odd(n)                       is n an odd integer (not divisible by 2)
    - is_even(n)                      is n an even integer (divisible by 2)
    - is_divisible(n,d)               is n exactly divisible by d
    - is_congruent(n,c,d)             is n congruent to c mod d
    - is_qr(a,n)                      is a a quadratic non-residue mod n