@@ -17,8 +17,7 @@ eval "use Test::Spellunker";
 plan skip_all => "Test::Spellunker required for testing POD spelling" if $@;
 
 add_stopwords(qw/-th
-                 bigint bigints
-                 bignum bignums
+                 bigint bigints bigfloat bigfloats bignum bignums
                  quadmath
                  pseudoprime pseudoprimes
                  primorial primorials
@@ -44,6 +43,7 @@ add_stopwords(qw/-th
                  bernfrac bernreal harmfrac harmreal stirling hclassno
                  vecsum vecprod vecmin vecmax vecreduce vecextract vecequal vecuniq
                  vecall vecany vecnone vecnotall vecfirst vecfirstidx vecmex vecpmex
+                 vecsample
                  vecsort vecsorti heapsort quicksort
                  sqrtint logint rootint powint addint subint mulint divint cdivint modint negint absint divrem tdivrem fdivrem cdivrem
                  qnr cornacchia
